# bbox-visualizer

./: .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  bbox_visualizer.py  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: black.yml  publish.yml  ruff.yml  test.yml  ty.yml
bbox_visualizer/: __init__.py  _version.py  bbox_visualizer.py
bbox_visualizer/core/: __init__.py  _utils.py  flags.py  labels.py  rectangle.py
bbox_visualizer/tests/: test_bbox_visualizer_multi_img.py  test_bbox_visualizer_single.py
bbox_visualizer/tests/assets/: source_single.json
containers/: Dockerfile.tests
demo/: multiple_objects.py  single_object.py
docs/: Makefile  api.md  api.rst  authors.rst  bbox_visualizer.core.rst  conf.py  contributing.rst  functions.rst  history.rst  index.md  index.rst  installation.md  installation.rst  make.bat  methods.rst  modules.rst  usage.md  usage.rst
docs/_static/: custom.css
examples/: env_examples.sh  label_stress.py  multiple_objects.py  multiple_objects_example.ipynb  quickstart.py  requirements_example.txt  simple_example.md  single_object.py  single_object_example.ipynb  test_multiple_objects_example.py  test_single_object_example.py
images/: cover_source.json  source.json  source_1.json  source_multiple.json
images/test_images/: source_bird.json  source_multiple_cats.json
scripts/: build.sh  init_test.sh
tests/: __init__.py  test_bbox_visualizer.py  test_multiple_objects.py  test_single_object.py
tests/test_images/: source_multiple_bird.json
