[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs>=0.4.0", "hatch-fancy-pypi-readme>=23.1.0"]
build-backend = "hatchling.build"

[project]
name = "bbox_visualizer"
dynamic = ["version"]
description = "Different ways of visualizing objects given bounding box data"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Shoumik Sharar Chowdhury", email = "shoumikchow@gmail.com" },
]
keywords = ["bbox_visualizer", "computer-vision", "bounding-box", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "opencv-python>=4.1.0.25",
    "numpy>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.0.3",
    "hatch>=1.7.0",
    "twine>=4.0.2",
    "pytest>=7.4.0",
    "ruff>=0.2.1",
]

docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "myst-parser>=2.0.0",
    "docutils>=0.20.1",
    "sphinx-copybutton>=0.5.2"
]

examples = [
    "notebook",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/shoumikchow/bbox-visualizer"
Repository = "https://github.com/shoumikchow/bbox-visualizer"
Documentation = "https://bbox-visualizer.readthedocs.io"
Issues = "https://github.com/shoumikchow/bbox-visualizer/issues"
Changelog = "https://github.com/shoumikchow/bbox-visualizer/releases"

[tool.hatch.build.targets.wheel]
packages = ["bbox_visualizer"]

[tool.hatch.build]
include = [
    "LICENSE",
    "README.md",
    "bbox_visualizer/**/*.py",
]
exclude = [
    "**/__pycache__",
    "**/.pytest_cache",
    "docs/_build",
]

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "post-release" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
# General settings that apply to all Ruff functionality
line-length = 88
target-version = "py38"
exclude = [
    "docs/*",
    "build/*",
    ".git",
    ".venv",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
# All the rules that were previously enabled plus additional useful ones
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "W",   # pycodestyle warnings
    "C90", # mccabe
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "RUF", # Ruff-specific rules
    "D",   # pydocstyle
    "S",   # bandit
    "TCH", # flake8-type-checking
]
ignore = [
    "E501",  # Line length is handled by formatter
    "N802",  # Function name should be lowercase
    "N806",  # Variable name should be lowercase
    "N816",  # Variable in global scope should not be mixedCase
    "COM812",  # Missing trailing comma in multiline collection
]
fixable = ["ALL"]
unfixable = []

# Ignore `E402` (import violations) in all `__init__.py` files
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"tests/**/*.py" = ["S", "D"]
"examples/**/*.py" = ["D"]

[tool.ruff.lint.isort]
known-first-party = ["bbox_visualizer"] 